[nrf noup] cmake: define pm.yml for nffs subsystem
This pm.yml defines a partition 'nffs_storage'.

Signed-off-by: Håkon Øye Amundsen <haakon.amundsen@nordicsemi.no>

--- a/subsys/fs/Kconfig
+++ b/subsys/fs/Kconfig
@@ -75,6 +75,14 @@ endmenu
 menu "NFFS Settings"
 	visible if FILE_SYSTEM_NFFS
 
+# This config must be compatible with
+# nrf/subsys/partition_manager/Kconfig.template.partition_size
+config PM_PARTITION_SIZE_NFFS_STORAGE
+	hex "Flash space reserved for nffs storage partition"
+	default 0x6000
+	help
+	  Flash space set aside for the nffs storage partition.
+
 config FS_NFFS_FLASH_DEV_NAME
 	string "Flash device name to be used"
 
