[nrf noup] cmake: Adopted to new multi image approach
All occurrences of ${IMAGE} have been removed in order to adopt to the
new strategy used for multi image builds.

Signed-off-by: Torsten Rasmussen <Torsten.Rasmussen@nordicsemi.no>

--- a/cmake/reports/CMakeLists.txt
+++ b/cmake/reports/CMakeLists.txt
@@ -18,7 +18,7 @@ foreach(report ram_report rom_report)
 endforeach()
 
 add_custom_command(
-  TARGET ${IMAGE}rom_report
+  TARGET rom_report
   POST_BUILD
   COMMAND
   ${PYTHON_EXECUTABLE}
