--- a/cmake/reports/CMakeLists.txt
+++ b/cmake/reports/CMakeLists.txt
@@ -17,12 +17,15 @@ foreach(report ram_report rom_report)
     )
 endforeach()
 
+
+get_domain(${BOARD} domain)
+
 add_custom_command(
   TARGET rom_report
   POST_BUILD
   COMMAND
   ${PYTHON_EXECUTABLE}
   ${ZEPHYR_BASE}/../nrf/scripts/partition_manager_report.py
-  --input ${CMAKE_BINARY_DIR}/partitions.yml
+  --input ${CMAKE_BINARY_DIR}/partitions_${domain}.yml
   "$<$<NOT:$<TARGET_EXISTS:partition_manager>>:--quiet>"
   )
