Bluetooth: select BT_RPMSG_NRF53 for non-secure variant of nrf5340
Prior to this you would get compilation error when building
samples for the nrf5340_dk_nrf5340_cpuappns board.

Signed-off-by: Håkon Øye Amundsen <haakon.amundsen@nordicsemi.no>

--- a/boards/arm/nrf5340_dk_nrf5340/CMakeLists.txt
+++ b/boards/arm/nrf5340_dk_nrf5340/CMakeLists.txt
@@ -2,6 +2,8 @@
 # SPDX-License-Identifier: Apache-2.0
 
 if (CONFIG_BOARD_NRF5340_DK_NRF5340_CPUAPP)
-zephyr_library()
-zephyr_library_sources(nrf5340_cpunet_reset.c)
+  if (NOT CONFIG_IS_SECURE_BOOTLOADER)
+    zephyr_library()
+    zephyr_library_sources(nrf5340_cpunet_reset.c)
+  endif()
 endif()
