--- a/samples/bluetooth/hci_rpmsg/prj.conf
+++ b/samples/bluetooth/hci_rpmsg/prj.conf
@@ -18,3 +18,5 @@ CONFIG_BT_HCI_RAW=y
 CONFIG_BT_MAX_CONN=16
 CONFIG_BT_CTLR_ASSERT_HANDLER=y
 CONFIG_BT_HCI_RAW_RESERVE=1
+
+CONFIG_BOOTLOADER_MCUBOOT=y
