--- a/samples/bluetooth/peripheral_hr/prj.conf
+++ b/samples/bluetooth/peripheral_hr/prj.conf
@@ -8,3 +8,8 @@ CONFIG_BT_GATT_BAS=y
 CONFIG_BT_GATT_HRS=y
 CONFIG_BT_DEVICE_NAME="Zephyr Heartrate Sensor"
 CONFIG_BT_DEVICE_APPEARANCE=833
+CONFIG_BOOTLOADER_MCUBOOT=y
+CONFIG_SECURE_BOOT=y
+CONFIG_SECURE_BOOT=n
+CONFIG_BOOTLOADER_MCUBOOT=n
+CONFIG_BOOTLOADER_MCUBOOT=y
