[nrf noup] cmake: include nrf reports cmake from repo
To make patches simpler and diff smaller.

Signed-off-by: Håkon Øye Amundsen <haakon.amundsen@nordicsemi.no>

--- a/cmake/reports/CMakeLists.txt
+++ b/cmake/reports/CMakeLists.txt
@@ -17,12 +17,4 @@ foreach(report ram_report rom_report)
     )
 endforeach()
 
-add_custom_command(
-  TARGET rom_report
-  POST_BUILD
-  COMMAND
-  ${PYTHON_EXECUTABLE}
-  ${ZEPHYR_BASE}/../nrf/scripts/partition_manager_report.py
-  --input ${CMAKE_BINARY_DIR}/partitions.yml
-  "$<$<NOT:$<TARGET_EXISTS:partition_manager>>:--quiet>"
-  )
+include(${ZEPHYR_BASE}/../nrf/cmake/reports.cmake)
